--- a/package.json
+++ b/package.json
@@ -51,28 +51,15 @@
     "paypal-express-checkout": "^1.6.3",
     "prop-types": "^15.7.2",
     "razorpay": "^2.0.6",
+    "react": "^16.8.6",
     "react-apexcharts": "^1.3.7",
     "react-apollo": "^3.1.5",
-    "react-content-loader": "^5.1.1",
-    "react-countdown-now": "^2.1.2",
-    "react-full-page": "^0.1.11",
-    "react-fullpage": "^0.1.19",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.8.6",
-    "react-i18next": "^11.7.2",
-    "react-image-lightbox": "^5.1.1",
-    "react-image-lightbox-next": "^4.3.0",
-    "react-input-range": "^1.3.0",
-    "react-masonry-css": "^1.0.14",
-    "react-messenger-customer-chat": "^0.8.0",
-    "react-paypal-button": "^4.1.1",
-    "react-paypal-checkout-button": "^2.0.3",
-    "react-sticky-el": "^2.0.5",
-    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.6",
     "react-ckeditor-component": "^1.1.0",
+    "react-content-loader": "^5.1.1",
+    "react-countdown-now": "^2.1.2",
     "react-countup": "^4.2.0",
     "react-data-grid": "^6.1.0",
     "react-datepicker": "^2.8.0",
@@ -81,8 +68,21 @@
     "react-dropzone-uploader": "^2.10.1",
     "react-feather": "^2.0.3",
     "react-fontawesome": "^1.6.1",
+    "react-full-page": "^0.1.11",
+    "react-fullpage": "^0.1.19",
     "react-google-charts": "^3.0.14",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.8.6",
+    "react-i18next": "^11.7.2",
+    "react-image-lightbox": "^5.1.1",
+    "react-image-lightbox-next": "^4.3.0",
     "react-images-upload": "^1.2.7",
+    "react-input-range": "^1.3.0",
+    "react-instagram-embed": "^2.0.0",
+    "react-masonry-css": "^1.0.14",
+    "react-messenger-customer-chat": "^0.8.0",
+    "react-paypal-button": "^4.1.1",
+    "react-paypal-checkout-button": "^2.0.3",
     "react-redux": "^7.1.0",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
@@ -91,6 +91,7 @@
     "react-slick": "^0.24.0",
     "react-smart-data-table": "^0.7.1",
     "react-star-rating-component": "^1.4.1",
+    "react-sticky-el": "^2.0.5",
     "react-table": "^6.10.0",
     "react-tabs": "^3.0.0",
     "react-toastify": "^5.3.2",
