--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "paypal-express-checkout": "^1.6.3",
     "prop-types": "^15.7.2",
     "razorpay": "^2.0.6",
-    "react": "^16.8.6",
+    "react": "^16.14.0",
     "react-apexcharts": "^1.3.7",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -71,6 +71,7 @@
     "react-full-page": "^0.1.11",
     "react-fullpage": "^0.1.19",
     "react-google-charts": "^3.0.14",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.8.6",
     "react-i18next": "^11.7.2",
