--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dropzone-uploader": "^2.10.1",
     "react-feather": "^2.0.3",
     "react-fontawesome": "^1.6.1",
+    "react-freshchat": "^1.0.11",
     "react-full-page": "^0.1.11",
     "react-fullpage": "^0.1.19",
     "react-google-charts": "^3.0.14",
