--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.6",
     "react-ckeditor-component": "^1.1.0",
+    "react-confirm-alert": "^2.7.0",
     "react-content-loader": "^5.1.1",
     "react-countdown-now": "^2.1.2",
     "react-countup": "^4.2.0",
