--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-router-dom": "^5.0.1",
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-scripts": "^3.0.1",
+    "react-share": "^4.4.0",
     "react-slick": "^0.24.0",
     "react-smart-data-table": "^0.7.1",
     "react-star-rating-component": "^1.4.1",
