--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aws-sdk": "^2.879.0",
     "axios": "^0.21.1",
     "bootstrap-scss": "^4.5.0",
+    "browser-router": "^0.2.0",
     "cors": "^2.8.5",
     "firebase": "^7.15.5",
     "fs": "0.0.1-security",
