--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aws-sdk": "^2.879.0",
     "axios": "^0.21.1",
     "bootstrap-scss": "^4.5.0",
+    "bower": "^1.8.12",
     "browser-router": "^0.2.0",
     "cors": "^2.8.5",
     "firebase": "^7.15.5",
@@ -36,11 +37,14 @@
     "graphql": "^14.3.1",
     "graphql-react": "^11.0.1",
     "graphql-tag": "^2.10.3",
+    "i": "^0.3.7",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "location-origin": "^1.1.4",
     "next": "^10.0.8",
+    "next-absolute-url": "^1.2.2",
     "next-apollo": "^5.0.4",
     "next-compose-plugins": "^2.2.0",
     "next-graphql-react": "^8.0.0",
