--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bootstrap-scss": "^4.5.0",
     "browser-router": "^0.2.0",
     "cors": "^2.8.5",
+    "css-loader": "^6.3.0",
+    "file-loader": "^6.2.0",
     "firebase": "^7.15.5",
     "fs": "0.0.1-security",
     "graphql": "^14.3.1",
@@ -46,7 +48,8 @@
     "next-graphql-react": "^8.0.0",
     "next-images": "^1.4.0",
     "next-redux-wrapper": "^6.0.2",
-    "node-fetch": "^2.6.0",
+    "next-share": "^0.12.2",
+    "node-fetch": "^2.6.5",
     "nookies": "2.2.1",
     "nprogress": "^0.2.0",
     "paypal-checkout": "^4.0.325",
@@ -84,10 +87,13 @@
     "react-image-lightbox": "^5.1.1",
     "react-image-lightbox-next": "^4.3.0",
     "react-images-upload": "^1.2.7",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-input-range": "^1.3.0",
     "react-instagram-embed": "^2.0.0",
     "react-masonry-css": "^1.0.14",
     "react-messenger-customer-chat": "^0.8.0",
+    "react-native": "^0.65.1",
+    "react-native-share": "^7.1.1",
     "react-paypal-button": "^4.1.1",
     "react-paypal-checkout-button": "^2.0.3",
     "react-redux": "^7.1.0",
@@ -106,7 +112,8 @@
     "reactstrap": "^8.0.1",
     "sass": "^1.26.8",
     "stripe": "^8.140.0",
-    "url-loader": "^4.1.0",
+    "style-loader": "^3.3.0",
+    "url-loader": "^4.1.1",
     "uuid": "^8.3.2"
   },
   "proxy": "http://localhost:4242"
