--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
+    "@expo/vector-icons": "^12.0.5",
     "@firebase/app": "^0.6.12",
     "@google-pay/button-react": "^2.3.0",
     "@stripe/react-stripe-js": "1.1.0",
@@ -74,6 +75,7 @@
     "react-data-grid": "^6.1.0",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
+    "react-dropdown": "^1.9.2",
     "react-dropzone": "^10.1.6",
     "react-dropzone-uploader": "^2.10.1",
     "react-feather": "^2.0.3",
@@ -100,15 +102,18 @@
     "react-native-share": "^7.1.1",
     "react-paypal-button": "^4.1.1",
     "react-paypal-checkout-button": "^2.0.3",
+    "react-rating": "^2.0.5",
     "react-redux": "^7.1.0",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-scripts": "^3.0.1",
     "react-share": "^4.4.0",
+    "react-simple-star-rating": "^3.0.0",
     "react-slick": "^0.24.0",
     "react-smart-data-table": "^0.7.1",
     "react-star-rating-component": "^1.4.1",
+    "react-star-ratings": "^2.3.0",
     "react-sticky-el": "^2.0.5",
     "react-table": "^6.10.0",
     "react-tabs": "^3.0.0",
