--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
     "@expo/vector-icons": "^12.0.5",
@@ -96,10 +97,12 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-input-range": "^1.3.0",
     "react-instagram-embed": "^2.0.0",
+    "react-loader-spinner": "^4.0.0",
     "react-masonry-css": "^1.0.14",
     "react-messenger-customer-chat": "^0.8.0",
     "react-native": "^0.65.1",
     "react-native-share": "^7.1.1",
+    "react-paginate": "^7.1.3",
     "react-paypal-button": "^4.1.1",
     "react-paypal-checkout-button": "^2.0.3",
     "react-rating": "^2.0.5",
