--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "react-table": "^6.10.0",
     "react-tabs": "^3.0.0",
     "react-toastify": "^5.3.2",
+    "react-whatsapp-widget": "^1.3.0",
     "reactstrap": "^8.0.1",
     "sass": "^1.26.8",
     "stripe": "^8.140.0",
